--- a/rock-paper-scissor/styles.css
+++ b/rock-paper-scissor/styles.css
@@ -50,7 +50,7 @@ button {
 }
 
 #your-choice {
-    color: #000;
+    color: #ec1212;
 }
 .userChoice__img {
     display: flex;
@@ -68,9 +68,10 @@ button {
     width: 100%;
     margin: 1rem 0;
     height: 45px;
+    border: 1px solid #fff;
 }
 #Confirm:hover {
-    background-color: #778da9;
+    background-color: #548b23;
     cursor: pointer;
     color: white;
     font-weight: 500;
@@ -90,24 +91,39 @@ button {
     display: none;
 }
 .show {
-    background-color: #a90d0d;
+    background-color: #e53926;
     display: flex;
-    width: 400px;
-    height: 120px;
+    width: 100%;
+    height: 100dvh;
     color: #fff;
     font-size: 20px;
     padding: 1rem;
+    opacity: .6;
 }
 #result {
     font-size: 46px;
     font-weight: 700;
 } 
-/* .computerSection {
-    margin: 1rem;
-} */
 .computer__span {
     margin-bottom: 2rem;
 }
 .computerSection .button__container {
     margin-bottom: 55px;    
+}
+.img__contain {
+    user-select: none;
+    /* position: absolute; */
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    display: none;
+}
+#computer-choice {
+    color: #1c79dd;
+}
+img {
+    width: 50%;
+    height: 50%;
 }
