--- a/rock-paper-scissor/styles.css
+++ b/rock-paper-scissor/styles.css
@@ -56,7 +56,7 @@ button {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 60%;
+    width: 50%;
     height: 40%;
     background: #fff;
     margin-top: 2rem;
@@ -90,6 +90,7 @@ button {
     z-index: 100;
     display: none;
 }
+/* En caso de Perder/No Escoger una opcion */
 .show {
     background-color: #e53926;
     display: flex;
@@ -100,6 +101,28 @@ button {
     padding: 1rem;
     opacity: .6;
 }
+/* En caso de ganar */
+.showWin {
+    background-color: #47c022;
+    display: flex;
+    width: 100%;
+    height: 100dvh;
+    color: #ffffff;
+    font-size: 20px;
+    padding: 1rem;
+    opacity: .6;
+}
+.showDraw {
+    background-color: #bfb8b8;
+    display: flex;
+    width: 100%;
+    height: 100dvh;
+    color: #090909;
+    font-size: 20px;
+    padding: 1rem;
+    opacity: .6;
+}
+
 #result {
     font-size: 46px;
     font-weight: 700;
@@ -126,4 +149,56 @@ button {
 img {
     width: 50%;
     height: 50%;
+}
+
+@media screen and (max-width: 768px) {
+    .container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        flex-direction: column;
+        height: 100dvh;
+        width: 100%;
+        /* overflow: auto; */
+    }
+    section {
+        width: 100%;
+        height: 49%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        flex-direction: column;
+    }
+    .img__contain {
+        user-select: none;
+        /* position: absolute; */
+        display: flex;
+        width: 100px;
+        height: 100px;
+        justify-content: center;
+        align-items: center;
+        display: none;
+    }
+    #computer-choice {
+        color: #1c79dd;
+    }
+    img {
+        width: 50%;
+        height: 50%;
+    }
+    button {
+        width: 75px;
+        height: 75px;
+        font-size: 12px;
+        border-radius: 5px;
+        border: 1px solid #000;
+    }
+    #Confirm {
+        width: 100%;
+        margin: 1rem 0;
+        height: 45px;
+        border: 1px solid #fff;
+    }
 }
