--- a/rock-paper-scissor/styles.css
+++ b/rock-paper-scissor/styles.css
@@ -169,7 +169,7 @@ img {
     }
     section {
         width: 100%;
-        height: 49%;
+        height: 50%;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -193,13 +193,16 @@ img {
         width: 50%;
         height: 40%;
         background: #fff;
-        margin-top: 2rem;
+        margin-top: 1rem;
     }
     .buttonsSection {
         margin: 0;
     }
     #computer-choice {
         color: #1c79dd;
+    }
+    h2 {
+        font-size: 20px;
     }
     img {
         width: 50%;
@@ -216,10 +219,15 @@ img {
     #Confirm {
         width: 100%;
         margin: 0;
+        margin-bottom: 1rem;
         height: 40px;
         border: 1px solid #fff;
     }
     .computerSection .buttonsSection {
         display: none;
+    }
+    .computerSection {
+        border-top: 3px solid #fff;
+        border-left: none;
     }
 }
